--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -40,6 +40,10 @@
         <li><a href="https://x.com/dhoeltgebaummm"  target="_blank">Acessar meu Twitter</a></li>
         <p>Meu Twitter é onde compartilho pensamentos e interajo com a comunidade.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod illo unde quasi cum molestiae repudiandae expedita perferendis culpa pariatur quos quibusdam praesentium quas accusamus earum, saepe voluptas consequuntur maiores deleniti!</p>
+        <li><a href="https://www.twitch.tv/dhoeltgebaum" target="_blank">Acessar meu Discord</a></li>
+        <p>Meu Discord é onde interajo com amigos e participo de comunidades.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque.</p>
     </ul>
 </body>
 </html>
