--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha rede social</title>
+    <link rel="stylesheet" href="Estudos/style.css">
 </head>
 <body>
     <ul>
