--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <p>Meu Discord é onde interajo com amigos e participo de comunidades.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque.</p>
+        <li><a href="https://www.twitch.tv/dhoeltgebaum" target="_blank">Acessar meu Tumblr</a></li>
+        <p>Meu Tumblr é onde compartilho conteúdo criativo e interajo com a comunidade.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque.</p>
     </ul>
 </body>
 </html>
