--- a/html5/index.html
+++ b/html5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha rede social</title>
+    <title>Minha rede social de Daniel</title>
     <link rel="stylesheet" href="Estudos/style.css">
 </head>
 <body>
