--- a/html5/index.html
+++ b/html5/index.html
@@ -48,6 +48,10 @@
         <li><a href="https://www.twitch.tv/dhoeltgebaum" target="_blank">Acessar meu Tumblr</a></li>
         <p>Meu Tumblr é onde compartilho conteúdo criativo e interajo com a comunidade.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque.</p>
+        <li><a href="https://www.twitch.tv/dhoeltgebaum" target="_blank">Acessar meu Quora</a></li>
+        <p>Meu Quora é onde compartilho conhecimento e respondo perguntas.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque. Quisquam, voluptatibus. Quod, cumque! Repudiandae, voluptatibus. Quasi, doloremque.</p>
+        
     </ul>
 </body>
 </html>
